Continue to Complete TrailerList

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="str_chevron_right">ChevronRight</string>
     <string name="str_home">Home</string>
     <string name="str_chart">Chart</string>
+    <string name="str_fan_favorites">Fan Favorites</string>
 </resources>
