--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,7 @@
     <string name="str_home">Home</string>
     <string name="str_chart">Chart</string>
     <string name="str_fan_favorites">Fan Favorites</string>
+    <string name="str_coming_soon">Coming Soon</string>
+    <string name="str_imdb">IMDb</string>
+    <string name="str_originals">Originals</string>
 </resources>
