--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="str_coming_soon">Coming Soon</string>
     <string name="str_imdb">IMDb</string>
     <string name="str_originals">Originals</string>
+    <string name="str_news">News</string>
 </resources>
