--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="str_locations">Locations</string>
     <string name="str_languages">Languages</string>
     <string name="str_companies">Companies</string>
+    <string name="str_casts">Casts</string>
 </resources>
