--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="str_companies">Companies</string>
     <string name="str_casts">Casts</string>
     <string name="str_more_like_this">More Like This</string>
+    <string name="str_burn_today">Burn Today</string>
 </resources>
